# agent-test

./: .dockerignore  .env.example  .gitignore  01_FAQ_01_Cooperativismo.txt  CLAUDE.md  Dockerfile  README.md  REPORTS_FEATURE.md  alembic.ini  create_admin.py  create_test_admin.py  docker-compose.yml  docs.txt  fix_role_enum.py  migrate_add_role.py  production-setup.md  pyproject.toml  railway.json  setup.sh  stamp_migration.py  start.sh  test_heavy_query_detection.py  test_system.py
alembic/: env.py
alembic/versions/: 4bf8c2a7d7c6_add_role_column_to_human_agents_table.py  5c3d8f9a2b1e_add_media_fields_to_messages_table.py  7a1b3c5d9e2f_add_yeastar_fields_to_conversations.py
context/: 00_README_06.docx  context.txt
data/: 01_Promoción_50_Credito_Aniersario.txt  01_Promoción_50_Supermercado_Pryca.txt  02_Convenio_Ayolab.txt  02_Convenio_ÓPTICA_INFINIT.txt  02_FAQ_01_Asociarse_Beneficios.txt  03_Country_Club.txt  03_Country_Club_08Oct25.md  05_App_Homebanking_DIMO_.txt  05_redes_de_cobranzas.txt  BC_Cooperativa_Nazareth_General.md  BC_Cooperativa_Nazareth_INSTITUCIONAL.txt  BC_Cooperativa_Nazareth_Servicios Financieros.txt  BC_Cooperativa_Nazareth_Servicios Financierosv2.txt  BC_Cooperativa_Nazareth_Servicios Sociales.txt  FAQ_Estatuto_Social_Cooperativa_Nazareth_COMPLETO.txt  FAQ_PROMOCIONES_COOPERATIVA_NAZARETH.txt  FAQ_Solicitudes_Nazareth.txt  Subsidios_2026.md  context.txt  docs.txt
data/faiss_index/: index.faiss  index.pkl
data/source/: BC Proyecto de implementación de chatbot Abr26.docx  subsidios_2026_CHATBOT.xlsx
docs/: yeastar-integration-guide.html  yeastar-integration-guide.md
src/agent_test/: auth.py  conversation_manager.py  database.py  local_fallback.py  main.py  models.py  rag_chain.py  security.py  yeastar_client.py
templates/: agent_dashboard.html  index.html  login.html  reports.html
tests/: eval_cases.json  run_eval.py
